@@ -5,6 +5,10 @@ Revision history for Perl extension File::HomeDir
 	- No longer treat lack of a home directory as an error
 	- More test written on the Israel.pm monthly meeting
 	- Major upgrade to Darwin driver (CNANDOR)
+	- Altered testing to allow cases where there are no "toys" directories
+	- More cleanups for Darwin in the root case
+	- Updating dependencies to something more modern
+          (mostly to ensure certain fixes to certain problems exist)
 
 0.58 Wed 10 May 2006
 	# This release contains only build-time changes
